# arduino_modern

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/avr/: digital_pin.hpp  drive_form.hpp  gears.hpp  motor.hpp  pins.hpp  stepper.hpp
include/avr/hardware/: arch.hpp  configurator.hpp  driver.hpp  initialize.hpp  pin.hpp  pins.hpp  tags.hpp
include/avr/hardware/standard/: arch.hpp  pins.hpp  ports.hpp
include/avr/hardware/test/: arch.hpp  ports.hpp
include/hardware/arch/: avr.hpp
include/hardware/arch/avr/: analog_comparator.hpp  analog_converter.hpp  digital_port.hpp
include/hardware/arch/generic/: chip.hpp  chip_builder.hpp  function.hpp  module.hpp  pin.hpp
include/hardware/chip/: atmega328p.hpp
include/mpl/: collection.hpp  integral_constant.hpp  undefined.hpp  util.hpp
platform_test/: CMakeLists.txt  standard.cpp  stepper.cpp
test/: CMakeLists.txt  arch.cpp  avr.cpp  chip.cpp  chip_builder.cpp  chips.cpp  configurator.cpp  driver.cpp  initialize.cpp  module.cpp  mpl.cpp  pin_idx.cpp  pins.cpp  stepper.cpp
